--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
           </div>
           <div class="footer-logo">
             <p>Content and platform availability may vary by region.
-              © 2024 Disney. All Rights Reserved.
+              © 2024 Disney. All Rights Reserved. Made by Hirusha
             </p>
           </div>
       </div>
